Modify DAS1 code to handle URLs in the standard format
git-svn-id: http://svn.code.sf.net/p/genoviz/code/trunk@5226 80d5a9c2-7d8c-4c9f-9369-4e03bca4d2bd